@@ -47,6 +47,17 @@ class IAvailableSizes(Interface):
     """A callable returning a dictionary of scale name => (width, height)
     """
 
+
+try:
+    from plone.app.imaging.interfaces import IStableImageScale
+except ImportError:
+    class IStableImageScale(Interface):
+        """ Marker for image scales when accessed with a UID-based URL.
+
+        These can be cached forever using the plone.stableResource ruleset.
+        """
+
+
 # Values
 
 class INamed(Interface):
