@@ -4,7 +4,10 @@ Changelog
 3.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Cache image scales using the plone.stableResource ruleset
+  when they are accessed via UID-based URLs.
+  (Requires plone.app.imaging >= 1.1.0)
+  [davisagli]
 
 
 3.0.1 (2014-10-23)
